--- a/task_7/index.html
+++ b/task_7/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="main-header">
             <div class="header-left">
-               <button data-tooltip="Main Menu"><i class="fa-solid fa-bars"></i></button> 
+               <button  type="button"data-tooltip="Main Menu"><i class="fa-solid fa-bars"></i></button> 
                <h1 class="logo"> 
                  <span class="logo-icon"><i class="fa-brands fa-trello"></i></span> 
                  <span class="logo-text">Trello</span>
@@ -22,12 +22,12 @@
                  <span class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span> 
                  <input type="text" placeholder="Search" class="search-input">
                 </div>
-                <button class="create-btn">Create</button>
+                <button type="button" class="create-btn">Create</button>
             </div>
 
             <div class="header-right">
-                <button class="header-icon-btn" data-tooltip="Notifications"><i class="fa-regular fa-bell"></i></button>
-                <button class="header-icon-btn" data-tooltip="Information"><i class="fa-regular fa-circle-question"></i></button>
+                <button type="button" class="header-icon-btn" data-tooltip="Notifications"><i class="fa-regular fa-bell"></i></button>
+                <button type="button" class="header-icon-btn" data-tooltip="Information"><i class="fa-regular fa-circle-question"></i></button>
                 
                 <div class="profile-avatar" data-tooltip="Account: EA">
                     <span class="avatar-text">EA</span>
@@ -39,7 +39,7 @@
      <div class="board-left">
         <h2 class="board-title">Development</h2>
        <div class="dropdown">
-        <button class="board-btn menu-arrow-btn" id="menuBtn" data-tooltip="Board Menu">
+        <button type="button" class="board-btn menu-arrow-btn" id="menuBtn" data-tooltip="Board Menu">
             <i class="fa-brands fa-trello"></i>
             <i class="fa-solid fa-chevron-down arrow-icon"></i>
         </button>
@@ -55,10 +55,10 @@
     </div>
      </div>
      <div class="board-right"> 
-        <button class="board-btn" data-tooltip="Filter"><i class="fa-solid fa-filter"></i></button>
-        <button class="board-btn" data-tooltip="Share"><i class="fa-solid fa-user-plus"></i></button>
-        <button class="board-btn star-btn" data-tooltip="Star"><i class="fa-regular fa-star"></i></button>
-        <button class="board-btn more-btn" data-tooltip="Show Menu"><i class="fa-solid fa-ellipsis"></i></button>
+        <button type="button" class="board-btn" data-tooltip="Filter"><i class="fa-solid fa-filter"></i></button>
+        <button type="button" class="board-btn" data-tooltip="Share"><i class="fa-solid fa-user-plus"></i></button>
+        <button type="button" class="board-btn star-btn" data-tooltip="Star"><i class="fa-regular fa-star"></i></button>
+        <button type="button" class="board-btn more-btn" data-tooltip="Show Menu"><i class="fa-solid fa-ellipsis"></i></button>
      </div>
     </nav>
 
@@ -66,7 +66,7 @@
     <div class="column">
         <div class="column-header">
             <h3>To Do</h3>
-            <button class="column-menu-btn" data-tooltip="List Actions"><i class="fa-solid fa-ellipsis"></i></button>
+            <button type="button" class="column-menu-btn" data-tooltip="List Actions"><i class="fa-solid fa-ellipsis"></i></button>
             <div class="col-dropdown">
                 <ul>
                     <li><i class="fa-solid fa-copy"></i> Copy List</li>
@@ -82,13 +82,13 @@
                 <p>CSS Temellerini Araştır</p>
             </div>
         </div>
-        <button class="add-card-btn"><i class="fa-solid fa-plus"></i> Add a card</button>
+        <button type="button" class="add-card-btn"><i class="fa-solid fa-plus"></i> Add a card</button>
     </div>
 
     <div class="column">
         <div class="column-header">
             <h3>In Progress</h3>
-            <button class="column-menu-btn" data-tooltip="List Actions"><i class="fa-solid fa-ellipsis"></i></button>
+            <button type="button" class="column-menu-btn" data-tooltip="List Actions"><i class="fa-solid fa-ellipsis"></i></button>
             <div class="col-dropdown">
                 <ul>
                     <li><i class="fa-solid fa-copy"></i> Copy List</li>
@@ -97,13 +97,13 @@
             </div>
         </div>
         <div class="card-list"></div>
-        <button class="add-card-btn"><i class="fa-solid fa-plus"></i> Add a card</button>
+        <button type="button" class="add-card-btn"><i class="fa-solid fa-plus"></i> Add a card</button>
     </div>
 
     <div class="column">
         <div class="column-header">
             <h3>DONE</h3>
-            <button class="column-menu-btn" data-tooltip="List Actions"><i class="fa-solid fa-ellipsis"></i></button>
+            <button type="button" class="column-menu-btn" data-tooltip="List Actions"><i class="fa-solid fa-ellipsis"></i></button>
             <div class="col-dropdown">
                 <ul>
                     <li><i class="fa-solid fa-copy"></i> Copy List</li>
@@ -112,11 +112,11 @@
             </div>
         </div>
         <div class="card-list"></div>
-        <button class="add-card-btn"><i class="fa-solid fa-plus"></i> Add a card</button>
+        <button type="button" class="add-card-btn"><i class="fa-solid fa-plus"></i> Add a card</button>
     </div>
 
     <div class="add-list-wrapper">
-        <button class="add-list-btn"><i class="fa-solid fa-plus"></i> Add another list</button>
+        <button type="button" class="add-list-btn"><i class="fa-solid fa-plus"></i> Add another list</button>
     </div>
 </main>
 <script src="scripts.js"></script>
